# 2026W-DIGHT360

./: .gitignore  README.md  corpus_feature_extraction.py  final_project_proposal.md  pyproject.toml  tao-te-ching.json  yasnas.json
corpora/poems/: README.md  annunciation.txt  apology.txt  big-top.txt  blue-valentine.txt  cathedral-of-rheims.txt  easter-week.txt  father-gerard-hopkins.txt  gates-and-doors.txt  haiku-01.txt  haiku-02.txt  haiku-03.txt  haiku-04.txt  haiku-05.txt  haiku-07.txt  haiku-08.txt  haiku-09.txt  haiku-10.txt  haiku-11.txt  haiku-12.txt  haiku-13.txt  haiku-14.txt  haiku-15.txt  haiku-16.txt  haiku-17.txt  haiku-18.txt  haiku-19.txt  haiku-20.txt  haiku-21.txt  haiku-22.txt  haiku-23.txt  haiku-24.txt  haiku-25.txt  haiku-26.txt  haiku-27.txt  haiku-28.txt  haiku-29.txt  haiku-30.txt  haiku-31.txt  haiku-32.txt  (+28 more)
labs/: feature_extraction.md  scripture_similarity.md  unit01.py  web_crawling.md
labs/encodings/: cp1252_quotes.txt  latin1_poem.txt
